--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,17 +7,36 @@
   --Grayish-Violet: hsl(257, 7%, 63%);
   --Very-Dark-Blue: hsl(255, 11%, 22%);
   --Very-Dark-Violet: hsl(260, 8%, 14%);
+  --menu-icon: url("/images/icon-hamburger.svg");
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 .container {
   width: 80%;
   margin: 0 auto;
 }
+@media screen and (max-width: 790px) {
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 body {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
 }
+/* menu classes start */
+.showMenu {
+  top: 100px !important;
+  left: 0 !important;
+}
+.hadeMenu {
+  top: -330px !important;
+  left: -130%;
+}
+/* menu classes end */
